Added an ignore for unitylockfile Updated todo list last commit also had some basic animation jank

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,8 +1,13 @@
-input equations for stats
-research maya controls in unity
-fix camera
-	angle up down
-	collision on camera
-attacking, collision on sword
-ai on enemy
-deal with more animation stuff
+Linden
+	Stats system
+	Enemy movement AI
+Zack
+	Camera
+		Mouse Movement
+		Camera Collision
+		Camera states
+	Implement animation system using mechanim
+	put collision on sword
+Eran
+	Animations for Irlana
+	Animations for enemy
